@startuml Group 5 - Quality Management System
skinparam classAttributeIconSize 0

title Group 5 - Quality Management Classes\nOflagowanie wpisów, pobieranie surowych, tagi jakości

' ========================================
' Controllers
' ========================================

class QualityManagementController {
  - qualityManagementService : QualityManagementService
  + QualityManagementController(qualityManagementService : QualityManagementService)
  + markDataEntrySuspicious(entryId : UUID) : ResponseEntity<?>
  + markDataEntryErroneous(entryId : UUID) : ResponseEntity<?>
  + getRawDownloadLink(datasetId : UUID) : ResponseEntity<?>
  + checkRawAvailability(datasetId : UUID) : ResponseEntity<?>
  + setQualityTag(datasetId : UUID, request : SetQualityTagRequest) : ResponseEntity<?>
  + listQualityValidityAlerts(datasetId : UUID, unresolvedOnly : Boolean) : ResponseEntity<?>
  + listRawBatches(datasetId : UUID) : ResponseEntity<?>
}

' ========================================
' Services
' ========================================

class QualityManagementService {
  - dataEntryRepository : DataEntryRepository
  - datasetService : DatasetService
  - alertRepository : QualityValidityAlertRepository
  - rawDataBatchRepository : RawDataBatchRepository
  + QualityManagementService(dataEntryRepository : DataEntryRepository, datasetService : DatasetService, alertRepository : QualityValidityAlertRepository, rawDataBatchRepository : RawDataBatchRepository)
  + markDataEntrySuspicious(entryId : UUID) : void
  + markDataEntryErroneous(entryId : UUID) : void
  + getRawDownloadLink(datasetId : UUID) : String
  + checkRawAvailability(datasetId : UUID) : RawDataAvailabilityResponse
  + setQualityTag(datasetId : UUID, qualityTag : String) : void
  + listQualityValidityAlerts(datasetId : UUID, unresolvedOnly : Boolean) : List<QualityValidityAlertResponse>
  + listRawBatches(datasetId : UUID) : List<RawDataBatchResponse>
}

' ========================================
' Entities
' ========================================

class DataEntry {
  - id : UUID
  - dataset : Dataset
  - content : String
  - suspicious : Boolean
  - erroneous : Boolean
  - createdAt : LocalDateTime
  - updatedAt : LocalDateTime
  + DataEntry()
  + DataEntry(dataset : Dataset, content : String)
  + updateContent(content : String) : DataEntry
  + setSuspicious(suspicious : Boolean) : void
  + setErroneous(erroneous : Boolean) : void
}

class QualityValidityAlert {
  - id : UUID
  - dataset : Dataset
  - alertType : String
  - message : String
  - severity : String
  - createdAt : LocalDateTime
  - resolved : Boolean
  + QualityValidityAlert()
  + QualityValidityAlert(dataset : Dataset, alertType : String, message : String, severity : String)
}

class RawDataBatch {
  - id : UUID
  - dataset : Dataset
  - batchName : String
  - dataUrl : String
  - sizeInBytes : Long
  - uploadedAt : LocalDateTime
  + RawDataBatch()
  + RawDataBatch(dataset : Dataset, batchName : String, dataUrl : String, sizeInBytes : Long)
}

class Dataset {
  - id : UUID
  - title : String
  - description : String
  - owner : User
  - qualityControllable : Boolean
  - schema : Schema
  - qualityTag : String
  - rawDataUrl : String
  - rawDataAvailable : Boolean
  + Dataset()
  + Dataset(title : String, description : String, owner : User, schema : Schema, qualityControllable : Boolean)
  + setQualityTag(qualityTag : String) : void
  + setRawDataUrl(rawDataUrl : String) : void
  + setRawDataAvailable(rawDataAvailable : Boolean) : void
}

' ========================================
' DTOs (Data Transfer Objects)
' ========================================

class SetQualityTagRequest {
  - qualityTag : String
  + getQualityTag() : String
  + setQualityTag(qualityTag : String) : void
}

class RawDataAvailabilityResponse {
  - available : Boolean
  - url : String
  + RawDataAvailabilityResponse(available : Boolean, url : String)
  + getAvailable() : Boolean
  + getUrl() : String
}

class QualityValidityAlertResponse {
  - id : UUID
  - datasetId : UUID
  - datasetTitle : String
  - alertType : String
  - message : String
  - severity : String
  - createdAt : LocalDateTime
  - resolved : Boolean
  + QualityValidityAlertResponse(id : UUID, datasetId : UUID, datasetTitle : String, alertType : String, message : String, severity : String, createdAt : LocalDateTime, resolved : Boolean)
}

class RawDataBatchResponse {
  - id : UUID
  - batchName : String
  - dataUrl : String
  - sizeInBytes : Long
  - uploadedAt : LocalDateTime
  + RawDataBatchResponse(id : UUID, batchName : String, dataUrl : String, sizeInBytes : Long, uploadedAt : LocalDateTime)
}

' ========================================
' Repositories
' ========================================

interface DataEntryRepository {
  + findById(id : UUID) : Optional<DataEntry>
  + findByDataset(dataset : Dataset) : List<DataEntry>
}

interface QualityValidityAlertRepository {
  + findByDataset(dataset : Dataset) : List<QualityValidityAlert>
  + findByDatasetAndResolvedFalse(dataset : Dataset) : List<QualityValidityAlert>
  + findByResolvedFalse() : List<QualityValidityAlert>
  + findAll() : List<QualityValidityAlert>
}

interface RawDataBatchRepository {
  + findByDataset(dataset : Dataset) : List<RawDataBatch>
}

' ========================================
' Exceptions
' ========================================

class ResourceNotFoundException {
  + ResourceNotFoundException(message : String)
}

' ========================================
' Relationships
' ========================================

QualityManagementController --"- qualityManagementService" QualityManagementService
QualityManagementService --"- dataEntryRepository" DataEntryRepository
QualityManagementService --"- alertRepository" QualityValidityAlertRepository
QualityManagementService --"- rawDataBatchRepository" RawDataBatchRepository
QualityManagementService ..> Dataset : uses
QualityManagementService ..> DataEntry : manages
QualityManagementService ..> QualityValidityAlert : creates
QualityManagementService ..> RawDataBatch : reads

DataEntry --"- dataset" Dataset
QualityValidityAlert --"- dataset" Dataset
RawDataBatch --"- dataset" Dataset

DataEntryRepository --|> JpaRepository
QualityValidityAlertRepository --|> JpaRepository
RawDataBatchRepository --|> JpaRepository

ResourceNotFoundException --|> RuntimeException

QualityManagementController ..> SetQualityTagRequest : uses
QualityManagementService ..> RawDataAvailabilityResponse : returns
QualityManagementService ..> QualityValidityAlertResponse : returns
QualityManagementService ..> RawDataBatchResponse : returns

' ========================================
' Notes
' ========================================

note right of QualityManagementController
  **REST Endpoints:**
  POST /api/quality/entries/{entryId}/mark-suspicious
  POST /api/quality/entries/{entryId}/mark-erroneous
  GET /api/quality/datasets/{datasetId}/raw-download-link
  GET /api/quality/datasets/{datasetId}/raw-availability
  PUT /api/quality/datasets/{datasetId}/quality-tag
  GET /api/quality/alerts
end note

note right of DataEntry
  **Quality Flags:**
  - suspicious: marked via markDataEntrySuspicious()
  - erroneous: marked via markDataEntryErroneous()
  Both trigger alert creation
end note

note right of QualityValidityAlert
  **Alert Types:**
  - SUSPICIOUS_ENTRY (MEDIUM)
  - ERRONEOUS_ENTRY (HIGH)
  - QUALITY_TAG_SET (LOW)
end note

note right of Dataset
  **Group 5 Fields:**
  - qualityTag: set via setQualityTag()
  - rawDataUrl: accessed via getRawDownloadLink()
  - rawDataAvailable: checked via checkRawAvailability()
end note

@enduml

